UPGRADE: v1.1.0 - Queue & Streaming Edition
 NEW FEATURES:
- Download queue management (5 concurrent limit)
- Viewing ticket system with position tracking
- RTMP/RTSP stream management
- Real-time WebSocket queue/stream updates

 NEW API ENDPOINTS:
- POST /api/directory - Create directories
- GET  /api/queue - Download queue status
- POST /api/queue/join - Join download queue
- GET  /api/queue/ticket/:id - Check ticket status
- GET  /api/streams - List active streams
- POST /api/streams/start - Start RTMP/RTSP stream
- POST /api/streams/:id/stop - Stop stream

 FRONTEND:
- New Queue tab with stats dashboard
- New Streams tab with start/stop controls
- Real-time updates via WebSocket

 INTERNALS:
- MCPFileClient: 9 new methods for queue/streaming
- WebSocket: 8 new action handlers
- REST API: 7 new endpoints

BRANDYFICATION

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "brandyfication-agent",
-  "version": "1.0.0",
-  "description": "Agentic frontend for BRANDYFICATION file hosting",
+  "version": "1.1.0",
+  "description": "Agentic frontend for BRANDYFICATION file hosting with streaming & queue support",
   "type": "module",
   "main": "dist/agent.js",
   "scripts": {
